--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://60487b01-b658-4ea7-8dc0-df962d38b929.preview.emergentagent.com
 WDS_SOCKET_PORT=443
