--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,9 @@
-REACT_APP_BACKEND_URL=https://14e7a005-e3f9-458c-a2ed-99cf7839c4fa.preview.emergentagent.com
+REACT_APP_BACKEND_URL=http://localhost:8001
 WDS_SOCKET_PORT=443
+REACT_APP_GOOGLE_ANALYTICS="G-WZ2XPRJ0XT"
+REACT_APP_SENTRY_DSN="https://2665815d1f735a840b7747e29ded752f@o4509610266525696.ingest.us.sentry.io/4509616637607936"
+
+# Optional: Third-party API Keys (for integrations)
+REACT_APP_SLACK_CLIENT_ID="9148351037957.9151179419525"
+REACT_APP_GITHUB_CLIENT_ID="Ov23ctbMGMAT3ZzOTAdm"
+REACT_APP_TRELLO_API_KEY=0e017d44be36a2e0f70006c171f0476a
