--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^9.35.0",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
