update front end

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # Backend API URL - Update this to match your backend server
-REACT_APP_BACKEND_URL=http://localhost:8001
+REACT_APP_BACKEND_URL=https://icon-time-tracker.onrender.com
 
 # Optional: Analytics & Monitoring
 REACT_APP_GOOGLE_ANALYTICS="G-WZ2XPRJ0XT"
