--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_URL=https://612f16d1-8884-46ea-97d7-5bbda9ec97ec.preview.emergentagent.com
+REACT_APP_BACKEND_URL=https://hubworkers.onrender.com
 WDS_SOCKET_PORT=443
 REACT_APP_GOOGLE_ANALYTICS="G-WZ2XPRJ0XT"
 REACT_APP_SENTRY_DSN="https://2665815d1f735a840b7747e29ded752f@o4509610266525696.ingest.us.sentry.io/4509616637607936"
